--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-template</title>
+    <link rel="icon" href="./static/favicon.ico" />
+    <title>火牛商宝</title>
   </head>
   <body>
     <div id="app"></div>
