--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <!--<link rel="icon" href="./static/favicon.ico" />-->
+    <link rel="icon" href="./static/favicon.ico" />
     <title>火牛商宝</title>
   </head>
   <body>
