主页链接方式修改

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <link rel="icon" href="./static/favicon.ico" />
     <title>火牛商宝</title>
   </head>
+  <script type="text/javascript">
+    /*
+     三个参数
+     file：一个是文件(类型是图片格式)，
+     w：一个是文件压缩的后宽度，宽度越小，字节越小
+     objDiv：一个是容器或者回调函数
+     photoCompress()
+     */
+
+  </script>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
+
 </html>
